--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.1",
-    "eslint": "^4.11.0",
+    "eslint": "^4.14.0",
     "express": "^4.16.2",
     "helmet": "^3.9.0",
+    "hpp": "^0.2.2",
     "query-string": "^5.0.1",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
@@ -33,15 +35,15 @@
     "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.7",
     "eslint-plugin-react": "^7.5.1",
-    "node-sass": "^4.7.1",
+    "node-sass": "^4.7.2",
     "process": "^0.11.10",
     "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.4.1",
-    "webpack-hot-middleware": "^2.20.0",
+    "style-loader": "^0.19.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^2.0.3",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-hot-middleware": "^2.21.0",
     "webpack-merge": "^4.1.1"
   }
 }
