--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "React, Redux, Hot-Reload, SCSS, Stage 2, ESLint, Express, ES2015",
   "main": "server.js",
   "scripts": {
-    "build": "webpack --config ./config/webpack.prod.js",
+    "start": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json",
     "test": "echo \"Error: no test specified\" && exit 0",
     "restart": "pm2 restart all",
-    "start": "pm2 start server.js --name boilerplate",
-    "start:dev": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json"
+    "start:prod": "pm2 start server.js --name boilerplate",
+    "build:prod": "webpack --config ./config/webpack.prod.js"
   },
   "author": "nure,",
   "license": "MIT",
