--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "connus",
-  "version": "0.1.0",
+  "name": "react-boilerplate",
+  "version": "0.2.0",
   "description": "React, Redux, Hot-Reload, SCSS, Stage 2, ESLint, Express, ES2015",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json",
     "test": "echo \"Error: no test specified\" && exit 0",
     "restart": "pm2 restart all",
-    "start:prod": "pm2 start server.js --name boilerplate",
-    "build:prod": "webpack --config ./config/webpack.prod.js"
+    "start:prod": "pm2 start server.js",
+    "build:prod": "webpack-cli --config ./config/webpack.prod.js"
   },
   "author": "nure,",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.17.1",
-    "eslint": "^4.14.0",
+    "axios": "^0.18.0",
+    "eslint": "^4.18.2",
     "express": "^4.16.2",
-    "helmet": "^3.9.0",
+    "helmet": "^3.12.0",
     "hpp": "^0.2.2",
     "query-string": "^5.0.1",
     "react": "^16.2.0",
@@ -29,21 +29,25 @@
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.3",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^0.28.7",
-    "eslint-plugin-react": "^7.5.1",
+    "clean-webpack-plugin": "^0.1.18",
+    "css-loader": "^0.28.10",
+    "eslint-plugin-react": "^7.7.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.0.4",
     "node-sass": "^4.7.2",
     "process": "^0.11.10",
-    "react-hot-loader": "^3.1.3",
-    "sass-loader": "^6.0.6",
+    "react-hot-loader": "^4.0.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^2.0.3",
-    "webpack-dev-server": "^2.9.7",
-    "webpack-hot-middleware": "^2.21.0",
-    "webpack-merge": "^4.1.1"
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-middleware": "^3.0.0",
+    "webpack-dev-server": "^3.1.0",
+    "webpack-hot-middleware": "^2.21.2",
+    "webpack-merge": "^4.1.2"
   }
 }
