--- a/package.json
+++ b/package.json
@@ -14,42 +14,44 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "eslint": "^4.18.2",
-    "express": "^4.16.2",
+    "eslint": "^4.19.1",
+    "express": "^4.16.3",
     "helmet": "^3.12.0",
     "hpp": "^0.2.2",
-    "query-string": "^5.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "query-string": "^6.0.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.3.1",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "winston": "^2.4.0"
+    "winston": "^2.4.1"
   },
   "devDependencies": {
     "babel-core": "^6.23.1",
-    "babel-loader": "^7.1.3",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.18",
-    "css-loader": "^0.28.10",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.0.4",
-    "node-sass": "^4.7.2",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.8.3",
     "process": "^0.11.10",
-    "react-hot-loader": "^4.0.0",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.2",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-dev-server": "^3.1.0",
+    "react-hot-loader": "^4.0.1",
+    "react-loadable": "^5.3.1",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.20.3",
+    "webpack": "^4.5.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-middleware": "^3.1.2",
+    "webpack-dev-server": "^3.1.3",
     "webpack-hot-middleware": "^2.21.2",
     "webpack-merge": "^4.1.2",
-    "webpack-pwa-manifest": "^3.6.1",
-    "workbox-webpack-plugin": "^2.1.3"
+    "webpack-pwa-manifest": "^3.6.2",
+    "workbox-webpack-plugin": "^3.1.0"
   }
 }
