--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-boilerplate",
-  "version": "0.2.0",
-  "description": "React, Redux, Hot-Reload, SCSS, Stage 2, ESLint, Express, ES2015",
+  "version": "0.3.0",
+  "description":
+    "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json",
@@ -14,7 +15,6 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.18.0",
-    "eslint": "^4.19.1",
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "hpp": "^0.2.2",
@@ -36,6 +36,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
