--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-boilerplate",
   "version": "0.3.0",
-  "description":
-    "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
+  "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json",
@@ -19,16 +18,16 @@
     "helmet": "^3.12.0",
     "hpp": "^0.2.2",
     "query-string": "^6.0.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "winston": "^2.4.1"
+    "winston": "^2.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
+    "babel-core": "^6.26.2",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.6.1",
@@ -40,17 +39,17 @@
     "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.8.3",
+    "node-sass": "^4.9.0",
     "process": "^0.11.10",
-    "react-hot-loader": "^4.0.1",
+    "react-hot-loader": "^4.1.2",
     "react-loadable": "^5.3.1",
     "sass-loader": "^7.0.1",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-middleware": "^3.1.2",
+    "style-loader": "^0.21.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-middleware": "^3.1.3",
     "webpack-dev-server": "^3.1.3",
-    "webpack-hot-middleware": "^2.21.2",
+    "webpack-hot-middleware": "^2.22.1",
     "webpack-merge": "^4.1.2",
     "webpack-pwa-manifest": "^3.6.2",
     "workbox-webpack-plugin": "^3.1.0"
