--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-boilerplate",
   "version": "0.4.0",
-  "description":
-    "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
+  "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=\"development\" nodemon --config ./config/nodemon.json",
@@ -18,41 +17,43 @@
     "express": "^4.16.3",
     "helmet": "^3.12.0",
     "hpp": "^0.2.2",
-    "query-string": "^6.0.0",
+    "query-string": "^6.1.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-helmet": "^5.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "winston": "^2.4.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.0",
     "process": "^0.11.10",
-    "react-hot-loader": "^4.1.2",
-    "react-loadable": "^5.3.1",
+    "react-hot-loader": "^4.1.3",
+    "react-loadable": "^5.4.0",
+    "resolve-url-loader": "^2.3.0",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.3",
-    "webpack-hot-middleware": "^2.22.1",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-merge": "^4.1.2",
     "webpack-pwa-manifest": "^3.6.2",
-    "workbox-webpack-plugin": "^3.1.0"
+    "workbox-webpack-plugin": "^3.2.0"
   }
 }
