--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-boilerplate",
-  "version": "0.5.0",
-  "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
+  "version": "0.6",
+  "description":
+    "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "pm2-dev ./config/ecosystem.config.js",
@@ -17,7 +18,6 @@
     "express": "^4.16.3",
     "helmet": "^3.12.1",
     "hpp": "^0.2.2",
-    "query-string": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-helmet": "^5.2.0",
@@ -36,22 +36,19 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
-    "cssnano": "^3.10.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.3.0",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.9.0",
     "pm2": "^2.10.4",
-    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.5",
-    "postcss-nested": "^3.0.0",
     "postcss-preset-env": "^5.1.0",
+    "precss": "^3.1.2",
     "react-hot-loader": "^4.3.0",
     "react-loadable": "^5.4.0",
     "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.0",
     "webpack-cli": "^3.0.2",
