--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "react-boilerplate",
-  "version": "0.6",
-  "description":
-    "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
+  "version": "0.6.1",
+  "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "pm2-dev ./config/ecosystem.config.js",
     "start:prod": "pm2 start server.js",
     "build:prod": "webpack --config ./config/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 0",
+    "test": "jest",
     "reload": "pm2 reload all"
   },
   "author": "nure,",
@@ -29,10 +28,11 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
@@ -41,6 +41,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.0",
+    "jest": "^23.1.0",
     "mini-css-extract-plugin": "^0.4.0",
     "pm2": "^2.10.4",
     "postcss-loader": "^2.1.5",
@@ -48,6 +49,7 @@
     "precss": "^3.1.2",
     "react-hot-loader": "^4.3.0",
     "react-loadable": "^5.4.0",
+    "react-test-renderer": "^16.4.0",
     "resolve-url-loader": "^2.3.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.11.0",
