--- a/package.json
+++ b/package.json
@@ -1,64 +1,75 @@
 {
   "name": "react-boilerplate",
-  "version": "0.6.1",
+  "version": "0.7",
   "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
     "start": "pm2-dev ./config/ecosystem.config.js",
+    "start:nodemon": "NODE_ENV=development nodemon --ignore 'src/**' --ext \"graphql js\"",
     "start:prod": "pm2 start server.js",
     "build:prod": "webpack --config ./config/webpack.prod.js",
+    "start:docker": "pm2-docker start ./config/ecosystem.docker.config.js",
     "test": "jest",
-    "reload": "pm2 reload all"
+    "precommit": "lint-staged",
+    "stats": "webpack-cli --config ./config/webpack.prod.js --json > stats.json"
   },
   "author": "nure,",
   "license": "MIT",
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "pre-commit": "precommit",
   "dependencies": {
     "axios": "^0.18.0",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "helmet": "^3.12.1",
+    "helmet": "^3.13.0",
     "hpp": "^0.2.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-helmet": "^5.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
+    "pm2": "^3.0.3",
+    "react": "^16.4.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-jest": "^23.0.1",
-    "babel-loader": "^7.1.4",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "^23.4.2",
+    "babel-loader": "^7.1.5",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-plugin-react": "^7.9.1",
+    "css-loader": "^1.0.0",
+    "eslint": "^5.3.0",
+    "eslint-plugin-react": "^7.10.0",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
-    "jest": "^23.1.0",
-    "mini-css-extract-plugin": "^0.4.0",
-    "pm2": "^2.10.4",
-    "postcss-loader": "^2.1.5",
-    "postcss-preset-env": "^5.1.0",
+    "jest": "^23.5.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
     "precss": "^3.1.2",
-    "react-hot-loader": "^4.3.3",
-    "react-loadable": "^5.4.0",
-    "react-test-renderer": "^16.4.1",
+    "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-hot-loader": "^4.3.4",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-test-renderer": "^16.4.2",
+    "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.8",
+    "style-loader": "^0.22.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.4",
-    "webpack-hot-middleware": "^2.22.2",
-    "webpack-merge": "^4.1.3",
-    "webpack-pwa-manifest": "^3.6.2",
-    "workbox-webpack-plugin": "^3.3.0"
+    "webpack-dev-server": "^3.1.5",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.4",
+    "webpack-pwa-manifest": "^3.6.3",
+    "workbox-webpack-plugin": "^3.4.1"
   }
 }
