--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-boilerplate",
-  "version": "0.7",
+  "version": "0.8",
   "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
   "main": "server.js",
   "scripts": {
@@ -23,53 +23,58 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
+    "@babel/runtime": "^7.0.0",
     "axios": "^0.18.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "hpp": "^0.2.2",
-    "pm2": "^3.0.3",
+    "pm2": "^3.0.4",
     "react": "^16.4.2",
-    "winston": "^3.0.0"
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
     "babel-jest": "^23.4.2",
-    "babel-loader": "^7.1.5",
+    "babel-loader": "^8.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
-    "eslint": "^5.3.0",
-    "eslint-plugin-react": "^7.10.0",
-    "file-loader": "^1.1.11",
+    "eslint": "^5.5.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.3.1",
     "jest": "^23.5.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^5.3.0",
     "precss": "^3.1.2",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.6",
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.4.2",
     "redux": "^4.0.0",
     "resolve-url-loader": "^2.3.0",
-    "style-loader": "^0.22.1",
-    "webpack": "^4.16.5",
+    "style-loader": "^0.23.0",
+    "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-middleware": "^3.1.3",
-    "webpack-dev-server": "^3.1.5",
-    "webpack-hot-middleware": "^2.22.3",
+    "webpack-dev-middleware": "^3.2.0",
+    "webpack-dev-server": "^3.1.7",
+    "webpack-hot-middleware": "^2.23.1",
     "webpack-merge": "^4.1.4",
-    "webpack-pwa-manifest": "^3.6.3",
+    "webpack-pwa-manifest": "^3.7.1",
     "workbox-webpack-plugin": "^3.4.1"
   }
 }
