--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   "pre-commit": "precommit",
   "dependencies": {
     "@babel/runtime": "^7.0.0",
+    "@material-ui/core": "^3.0.2",
     "axios": "^0.18.0",
+    "busboy": "^0.2.14",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "helmet": "^3.13.0",
     "hpp": "^0.2.2",
+    "pdf-text": "^0.4.0",
     "pm2": "^3.0.4",
     "react": "^16.4.2",
     "winston": "^3.1.0"
