--- a/package.json
+++ b/package.json
@@ -23,47 +23,48 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
-    "@babel/runtime": "^7.1.2",
+    "@babel/runtime": "^7.1.5",
     "body-parser": "^1.18.3",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
-    "helmet": "^3.14.0",
+    "helmet": "^3.15.0",
     "hpp": "^0.2.2",
-    "react": "^16.5.2"
+    "react": "^16.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
+    "@babel/core": "^7.1.6",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.2.0",
+    "autoprefixer": "^9.3.1",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.7.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.3.1",
+    "image-webpack-loader": "^4.5.0",
     "mini-css-extract-plugin": "^0.4.4",
     "postcss-loader": "^3.0.0",
     "precss": "^3.1.2",
-    "react-dom": "^16.5.2",
-    "react-hot-loader": "^4.3.11",
+    "react-dom": "^16.6.3",
+    "react-hot-loader": "^4.3.12",
     "react-router-dom": "^4.3.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.20.2",
+    "webpack": "^4.26.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.4",
     "webpack-pwa-manifest": "^3.7.1",
-    "workbox-webpack-plugin": "^3.6.2"
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
