--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^4.5.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "lodash.camelcase": "^4.3.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "postcss-loader": "^3.0.0",
-    "precss": "^3.1.2",
+    "precss": "^4.0.0",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
     "react-router-dom": "^4.3.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.26.0",
+    "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
