--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-router-dom": "^4.3.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
