--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "react-boilerplate",
-  "version": "0.9",
-  "description": "React, Redux, code-splitting, hot-reload, Scss, Stage 2, ESLint, Express, ES2016",
+  "version": "0.10.0",
+  "description": "Express, React, code-splitting, hot-reload, PostCSS, Linter, Babel",
   "main": "server.js",
   "scripts": {
-    "start": "pm2-dev ./config/ecosystem.config.js",
-    "start:nodemon": "NODE_ENV=development nodemon --ignore 'src/**' -e \"graphql js\"",
-    "start:prod": "pm2 start server.js",
-    "build:prod": "webpack --config ./config/webpack.prod.js",
-    "start:docker": "pm2-docker start ./config/ecosystem.docker.config.js",
-    "test": "jest",
+    "start": "npx nodemon server --exec babel-node",
+    "serve": "NODE_ENV=\"production\" node dist/server/index.js",
+    "serve:docker": "npx pm2-runtime config/ecosystem.config.json --production",
+    "build": "npx babel server -d dist/server",
+    "build:app": "npx webpack-cli --config config/webpack.prod.js",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "precommit": "lint-staged",
     "stats": "webpack-cli --config ./config/webpack.prod.js --json > stats.json"
   },
@@ -23,50 +23,50 @@
   },
   "pre-commit": "precommit",
   "dependencies": {
-    "@babel/runtime": "^7.1.5",
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-decorators": "^7.2.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
     "hpp": "^0.2.2",
-    "react": "^16.6.3"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.6",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-optional-chaining": "^7.0.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-react": "^7.0.0",
-    "autoprefixer": "^9.3.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/node": "^7.2.2",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-add-react-displayname": "0.0.5",
     "clean-webpack-plugin": "^1.0.0",
-    "css-loader": "^1.0.1",
-    "eslint": "^5.9.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "file-loader": "^2.0.0",
+    "eslint-plugin-react": "^7.12.3",
+    "favicons-webpack-plugin": "0.0.9",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^4.5.0",
-    "lodash.camelcase": "^4.3.0",
-    "mini-css-extract-plugin": "^0.4.5",
+    "image-webpack-loader": "^4.6.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "nodemon": "^1.18.9",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "react-dom": "^16.6.3",
-    "react-hot-loader": "^4.3.12",
-    "react-router-dom": "^4.3.1",
     "resolve-url-loader": "^3.0.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.26.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-middleware": "^3.4.0",
+    "webpack": "^4.28.4",
+    "webpack-dev-middleware": "^3.5.0",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.4",
-    "webpack-pwa-manifest": "^3.7.1",
+    "webpack-merge": "^4.2.1",
+    "webpack-pwa-manifest": "^4.0.0",
     "workbox-webpack-plugin": "^3.6.3"
   }
 }
