--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Express, React, code-splitting, hot-reload, PostCSS, Linter, Babel",
   "main": "server.js",
   "scripts": {
-    "start": "npx nodemon server --exec babel-node",
+    "start": "NODE_ENV=\"development\" npx nodemon server --exec babel-node --watch server -e js,graphql",
     "serve": "NODE_ENV=\"production\" node dist/server/index.js",
     "serve:docker": "npx pm2-runtime config/ecosystem.config.json --production",
     "build": "npx babel server -d dist/server",
     "build:app": "npx webpack-cli --config config/webpack.prod.js",
     "test": "echo \"Error: no test specified\" && exit 0",
+    "test:app": "jest",
     "precommit": "lint-staged",
     "stats": "webpack-cli --config ./config/webpack.prod.js --json > stats.json"
   },
@@ -38,19 +39,24 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-hot-loader": "^4.6.3",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-do-expressions": "^7.2.0",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
+    "@babel/plugin-proposal-export-namespace-from": "^7.2.0",
+    "@babel/preset-flow": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "babel-plugin-add-react-displayname": "0.0.5",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -67,6 +73,6 @@
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.2.1",
     "webpack-pwa-manifest": "^4.0.0",
-    "workbox-webpack-plugin": "^3.6.3"
+    "workbox-webpack-plugin": "^4.1.1"
   }
 }
